# cista-rpc

./: .gitignore  .pkg  CMakeLists.txt  example.cc
cmake/: clang-tidy.cmake  pkg.cmake
include/crpc/: cb_t.h  client.h  fn.h  server.h  stub_transport.h  ws_message.h  ws_server.h  ws_transport.h
test/: first_test.cc
